# clr-parser-generator

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
src/: lib.rs
src/rule/: gen.rs  lexer.rs  mod.rs  normalized_rule_table.rs  parser.rs  rule_table.rs
