[package]
name = "clr-parser-generator"
version = "0.1.0"
authors = ["AcrylicShrimp <led789zxpp@naver.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
num_cpus = "1"
scoped_threadpool = "0.1"
